--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:id="@+id/lstKings2"
         android:layout_weight="1"
-        android:coiceMode="multipleChoice"
+        android:choiceMode="multipleChoice"
         android:drawSelectorOnTop="false"/>
 
 </LinearLayout>
